--- a/client/src/scss/_colors.scss
+++ b/client/src/scss/_colors.scss
@@ -1,10 +1,10 @@
 /// Single source of truth for colours in the application.
 
-$primary: #42a5f5;
+$primary: #cb4c3a;
 $on-primary: #212121;
-$primary-light: #80d6ff;
+$primary-light: #ee5945;
 $on-primary-light: #212121;
-$primary-dark: #0077c2;
+$primary-dark: #833126;
 $on-primary-dark: #f5f5f5;
 
 $secondary: #ff6122;
