--- a/client/src/scss/_fonts.scss
+++ b/client/src/scss/_fonts.scss
@@ -1,6 +1,14 @@
 $general: "Roboto", sans-serif;
-$card: "Helvetica Neue", "Nimbus Sans L", sans-serif;
+$card: "Minion Pro", serif;
+/* $card: "Minion Pro", "Helvetica Neue", "Nimbus Sans L", sans-serif; */
 $game-code: "Source Code Pro", monospace;
+
+@font-face {
+  font-family: "Minion Pro";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../../assets/fonts/minion-pro-regular.otf") format("otf");
+}
 
 @font-face {
   font-family: "Nimbus Sans L";
