--- a/client/src/scss/pages/_lobby.scss
+++ b/client/src/scss/pages/_lobby.scss
@@ -35,6 +35,7 @@ $users-width: 18rem;
 
   color: cards.$call-color;
   background-color: cards.$call-background;
+  opacity: 0.8;
 
   .left {
     display: flex;
