--- a/client/src/scss/pages/_lobby.scss
+++ b/client/src/scss/pages/_lobby.scss
@@ -33,8 +33,10 @@ $users-width: 18rem;
   justify-content: space-between;
   align-items: center;
 
-  color: cards.$call-color;
-  background-color: cards.$call-background;
+  /* color: cards.$call-color;
+  background-color: cards.$call-background; */
+  color: #000;
+  background-color: #c8d0d8;
   opacity: 0.8;
 
   .left {
