Pulling bad image, fixing lang

--- a/client/src/scss/massive-decks.scss
+++ b/client/src/scss/massive-decks.scss
@@ -22,7 +22,7 @@ body {
   color: colors.$on-primary;
   /* background: colors.$background url(../../assets/images/background.svg) repeat; */
   background-image: url('../../assets/images/el-logo.png');
-  background-position: right 4rem;
+  background-position: 98% 4rem;
   background-repeat: no-repeat;
   background-size: 50% auto;
   margin: 0;
